--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 </header>
     <main id="main-content">
-  <p>I am a PhD Candidate at the University of Basel in the NOMIS project  <a href="https://nomisfoundation.ch/projects/assisted-thinking-a-deep-history-of-scholarly-ai/">«Assisted Thinking: A Deep History of Scholarly AI»</a> where I work on a PhD project on Prompting with AI Models. I completed my M.A. in media philosophy and art research at Karlsruhe University of Arts and Design (HfG Karlsruhe) with a thesis on the political epistemology of generativity pertaining to artificial intelligence. Previously, I studied media and cultural studies in Vienna, Potsdam and Hong Kong.</p>
+  <p>I am a PhD Candidate at the University of Basel in the NOMIS project  <a href="https://nomisfoundation.ch/projects/assisted-thinking-a-deep-history-of-scholarly-ai/">«Assisted Thinking: A Deep History of Scholarly AI»</a> where I work on a PhD project on prompting with AI models. I completed my M.A. in media philosophy and art research at Karlsruhe University of Arts and Design (HfG Karlsruhe) with a thesis on the political epistemology of generativity pertaining to artificial intelligence. Previously, I studied media and cultural studies in Vienna, Potsdam and Hong Kong.</p>
 <p> <a href="mailto:yannick.fritz@unibas.ch">Mail</a> </p>
 <h1 id="texts">Texts</h1>
 <p><a href="https://doi.org/10.5282/UBM/EPUB.126472">«Weltmodelle ordnen. Zur politischen Epistemologie der Generativität.»</a> In <em>Generativität</em>, by Matthias Bruhn (Ed.) and Katharina Weinstock (Ed.). Open Publishing LMU ; Buchschmiede, 2025.  <a href="https://doi.org/10.5282/UBM/EPUB.126472">doi.org/10.5282/UBM/EPUB.126472</a>.</p>
