--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 <p> <a href="mailto:yannick.fritz@unibas.ch">Mail</a> </p>
 <h1 id="texts">Texts</h1>
 <p><a href="https://doi.org/10.5282/UBM/EPUB.126472">«Weltmodelle ordnen. Zur politischen Epistemologie der Generativität.»</a> In <em>Generativität</em>, by Matthias Bruhn (Ed.) and Katharina Weinstock (Ed.). Open Publishing LMU, 2025.  <a href="https://doi.org/10.5282/UBM/EPUB.126472">doi.org/10.5282/UBM/EPUB.126472</a>.</p>
-<p>«Offene Enden. Waldemar Cordeiros ‹digitale Kunst› und ihr Nachleben.» <a href="https://springerin.at/2025/3/"><em>springerin</em></a>, no. 3 (2025).</p>
+<p>«Offene Enden. Waldemar Cordeiros ‹digitale Kunst› und ihr Nachleben.» <a href="https://springerin.at/2025/3/"><em>springerin</em></a>, WANDALA – postkoloniale Aushandlungen, no. 3 (2025): 8–9.</p>
 <p>«Against Future Pasts. On the Foundations and Critiques of Longtermism.» In  <a href="https://www.marian-arnd.de/say-no-to-the-future/"><em>Say No to the Future</em></a>, by Jules Buchholtz (Ed.). Verlag Marian Arnd UG, 2025.</p>
-<p><a href="https://www.springerin.at/2024/3/der-bedeutung-struktur-geben/">«Der Bedeutung Struktur geben. Wie große Sprachmodelle implizit auf die Theorie des Anthropologen Claude Lévi-Strauss Bezug nehmen.»</a> <em>springerin</em>, 2024.</p>
+<p><a href="https://www.springerin.at/2024/3/der-bedeutung-struktur-geben/">«Der Bedeutung Struktur geben. Wie große Sprachmodelle implizit auf die Theorie des Anthropologen Claude Lévi-Strauss Bezug nehmen.»</a> <em>springerin</em>, Verwicklungen, no. 3 (2024): 10–11.</p>
 <p><a href="https://www.springerin.at/2024/1/intelligenz-als-machtkonzentration/">«Intelligenz als Machtkonzentration. Interview mit Meredith Whittaker, der Präsidentin von Signal, über KI und die Big-Tech-Konzerne.»</a> <em>springerin</em>, ArtGPT, no. 1 (2024): 43–47.</p>
 <p><a href="https://www.springerin.at/en/2024/1/intelligenz-als-machtkonzentration/">«Intelligence as Concentration of Power. Interview with Meredith Whittaker, President of Signal, about AI and Big Tech.»</a> 2024. <em>springerin</em>.</p>
 <p>with Livia Emma Lazzarini, Charlotte Eifler, Paolo Caffoni, and Jule Köpke. <a href="https://cms.hfg-journal.legrisch.com/assets/AWC_29_56p_DS_web.pdf">«Bigger Cages, Longer Chains.»</a> <em>Arts of the Working Class</em>, Unions, vol. 29 (2023): 10.</p>
